...
        android:padding="12dp"
        android:text="Login"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_button"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="No Account Yet? Create One"
        android:gravity="center"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="fill_parent"
...
